# udaplay-agent

./: Udaplay_01_starter_project.ipynb  Udaplay_02_starter_project.ipynb  main.py  pyproject.toml
lib/: llm.py
