[project]
name = "udaplay-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.8",
    "ipykernel>=7.2.0",
    "openai>=1.73.0",
    "pdfplumber>=0.11.9",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "tavily-python>=0.5.4",
]
